# unnatural_designs

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .worktreeinclude  BUILD.bazel  MODULE.bazel  README.md  codecov.yml  go.work  go.work.sum  pyproject.toml  release-please-config.json  renovate.json  requirements_lock.txt
.claude/: CLAUDE.md  settings.json
.claude/hooks/: worktree-create.sh  worktree-remove.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  initialize.sh  post-create.sh  post-start.sh
.devcontainer/.git-plumbing/: README.md
.github/: CODEOWNERS
.github/actions/commit-file-via-app/: README.md  action.yml
.github/actions/setup-bazel-remote/: action.yml
.github/workflows/: ci.yml  codeql.yml  commit-file-via-app-selftest.yml  devcontainer.yml  renovate-derived-files.yml  renovate-module-bazel-lock.yml  renovate-requirements-lock.yml  security.yml
apps/: BUILD.bazel
apps/theater/: BUILD.bazel  README.md  RUNBOOK.md  api-contract.md  frontend-bridge.md
apps/theater/cmd/pair_devices/: BUILD.bazel  main.py
apps/theater/cmd/theaterctl/: BUILD.bazel  main.py
apps/theater/deploy/: Dockerfile
apps/theater/deploy/k8s/: README.md
apps/theater/frontend/: README.md
apps/theater/service/: BUILD.bazel  config.example.toml  integration_test.py  main.py  requirements.txt  rest.py  state.py  ws_router.py
apps/theater/service/api/: schema.py  wiring.py
apps/theater/service/devices/: _mock.py  base.py  lg_webos.py  lutron_leap.py  sony_bravia.py  sony_escapi.py
docs/: BUILD.bazel  future-considerations.md  reminder-tags.md
infra/: BUILD.bazel
libs/: BUILD.bazel
meta/: BUILD.bazel  reminder-tags.md
meta/scripts/: BUILD.bazel  README.md  _workspace.py  check_go_modules.py  check_go_work.py  check_modules.py  check_no_cgo.py  check_python_scale.py  check_release_please.py  check_secrets_dir.py  classify_changed_paths.py  go_derived_files.py  ratify_renovate_proposals.py  test__workspace.py  test_check_go_modules.py  test_check_go_work.py  test_check_modules.py  test_check_no_cgo.py  test_check_python_scale.py  test_check_release_please.py  test_check_secrets_dir.py  test_classify_changed_paths.py  test_go_derived_files.py  test_ratify_renovate_proposals.py
meta/scripts/smoke_py/: BUILD.bazel  smoke_test.py
secrets/: secrets.md
services/: BUILD.bazel
tools/: BUILD.bazel
tools/network_infrastructure_maintenance/: .gitignore  .golangci.yml  BUILD.bazel  CHANGELOG.md  README.md  go.mod  go.sum  netbox_audit.config.json
tools/network_infrastructure_maintenance/cmd/netbox_audit/: BUILD.bazel  CHECKS.md  CONFIG.md  OPERATION.md  README.md  checks.go  config.go  constants.go  main.go  main_test.go  models.go  progress.go  report.go
tools/network_infrastructure_maintenance/internal/audit/: BUILD.bazel  audit_test.go  cables.go  constants.go  device_locations.go  device_type_drift.go  dhcp_reservations.go  helpers.go  honeypots.go  interface_vrf.go  ip_vlan_consistency.go  mac_consistency.go  module_consistency.go  parent_placement.go  patch_panel_continuity.go  planned_devices.go  poe_power.go  private_ip_vrf.go  rack_placement.go  required_device_fields.go  result.go  switch_link_symmetry.go  wireless_normalization.go
tools/network_infrastructure_maintenance/internal/netbox/: BUILD.bazel  client.go  client_test.go  models.go  snapshot.go  snapshot_test.go
tools/network_infrastructure_maintenance/internal/shared/: BUILD.bazel  constants.go  terminal.go  terminal_test.go
tools/network_infrastructure_maintenance/internal/ui/progress/: BUILD.bazel  plain.go  plain_test.go  reporter.go  reporter_test.go  rich.go  rich_test.go
