load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/Syndic/unnatural_designs
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.work",
        "-to_macro=deps.bzl%go_deps",
        "-prune",
    ],
    command = "update-repos",
)
