module(
    name = "unnatural_designs",
    version = "0.0.0",
)

# ── Platforms ─────────────────────────────────────────────────────────────────────────────────────
# Standard OS/CPU constraints used by //platforms:*.
bazel_dep(name = "platforms", version = "1.1.0")

# ── BuildBuddy remote execution ───────────────────────────────────────────────────────────────────
# Provides exec-platform definitions (linux_x86_64, linux_arm64) and CC toolchains for BB's
# remote executors. The use_extension call materialises the @toolchains_buildbuddy repo so
# its platform labels resolve when referenced from .bazelrc. We deliberately do NOT call
# register_execution_platforms here: a global registration would make BB's linux platforms
# candidate exec platforms on the darwin_arm64 CI runner too. ijar (a Bazel-internal C++
# tool) has no exec_compatible_with constraints, so Bazel would pick a linux exec platform
# first, then fail to find a cpp toolchain (the darwin host only has its own auto-detected
# cpp toolchain). Instead, .bazelrc adds the matching BB platform via
# --extra_execution_platforms on each --config=linux_* so it's only a candidate when we're
# actually targeting linux. See https://www.buildbuddy.io/blog/arm64-support/ for the arm64
# rollout that motivated this.
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")

# ── Go ────────────────────────────────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.3")

# Discover external Go deps from the workspace's go.work + per-module go.mod files.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# use_repo entries below are managed by `bazel mod tidy` — run that after
# adding or removing an external Go import; do not hand-edit.
use_repo(go_deps, "com_github_vbauerster_mpb_v8")

# ── Python ────────────────────────────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_python", version = "2.0.1")

# TRANSIENT: pinned to the post-2.0.1 commit that adds cp314 to the bundled coverage
# wheel set (bazel-contrib/rules_python#3764). Without this, `configure_coverage_tool`
# is a silent no-op on Python 3.14 and `bazel coverage` emits no lcov for py_test.
# Remove this override and bump bazel_dep above as soon as the first rules_python
# release containing #3764 is available — Renovate's bazel-module manager will surface
# that release as a version-bump PR; that PR is the prompt to drop this override.
git_override(
    module_name = "rules_python",
    remote = "https://github.com/bazel-contrib/rules_python.git",
    commit = "5511aaf1e95fbf6b3eeca64ad503b26d712f50aa",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.14",
    # Wires the bundled `coverage` library into py_test runfiles when
    # `bazel coverage` runs, so Python tests emit lcov data alongside Go.
    configure_coverage_tool = True,
)
