module(
    name = "unnatural_designs",
    version = "0.0.0",
)

# ── Platforms ─────────────────────────────────────────────────────────────────────────────────────
# Standard OS/CPU constraints used by //platforms:*.
bazel_dep(name = "platforms", version = "1.1.0")

# ── BuildBuddy remote execution ───────────────────────────────────────────────────────────────────
# Provides exec-platform definitions (linux_x86_64, linux_arm64) and CC toolchains for BB's
# remote executors. The use_extension call materialises the @toolchains_buildbuddy repo so
# its platform labels resolve when referenced from .bazelrc. We deliberately do NOT call
# register_execution_platforms here: a global registration would make BB's linux platforms
# candidate exec platforms on the darwin_arm64 CI runner too. ijar (a Bazel-internal C++
# tool) has no exec_compatible_with constraints, so Bazel would pick a linux exec platform
# first, then fail to find a cpp toolchain (the darwin host only has its own auto-detected
# cpp toolchain). Instead, .bazelrc adds the matching BB platform via
# --extra_execution_platforms on each --config=linux_* so it's only a candidate when we're
# actually targeting linux. See https://www.buildbuddy.io/blog/arm64-support/ for the arm64
# rollout that motivated this.
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")

# ── Go ────────────────────────────────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download the SDK for each platform we may execute Go actions on. A single
# go_sdk.download(version="X") tag (no goos/goarch) downloads only the host SDK,
# which breaks `--config=remote_bb` from a darwin host: BuildBuddy executors are
# linux_amd64 and would receive the darwin SDK ("cannot execute binary file: Exec
# format error" on the GoToolchainBinaryBuild action). Listing each platform
# explicitly registers a toolchain per exec_compatible_with, and rules_go selects
# the matching one when the exec platform is resolved.
#
# Renovate's regex matcher in renovate.json picks up each occurrence; bumps will
# arrive as one grouped PR ("Language toolchain SDKs") keeping all three in sync.
go_sdk.download(version = "1.26.3", goos = "linux", goarch = "amd64")
go_sdk.download(version = "1.26.3", goos = "linux", goarch = "arm64")
go_sdk.download(version = "1.26.3", goos = "darwin", goarch = "arm64")

# Discover external Go deps from the workspace's go.work + per-module go.mod files.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")

# use_repo entries below are managed by `bazel mod tidy` — run that after
# adding or removing an external Go import; do not hand-edit.
use_repo(go_deps, "com_github_vbauerster_mpb_v8")

# ── Python ────────────────────────────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_python", version = "2.0.1")

# TRANSIENT: pinned to the post-2.0.1 commit that adds cp314 to the bundled coverage
# wheel set (bazel-contrib/rules_python#3764). Without this, `configure_coverage_tool`
# is a silent no-op on Python 3.14 and `bazel coverage` emits no lcov for py_test.
# Remove this override and bump bazel_dep above as soon as the first rules_python
# release containing #3764 is available — Renovate's bazel-module manager will surface
# that release as a version-bump PR; that PR is the prompt to drop this override.
git_override(
    module_name = "rules_python",
    remote = "https://github.com/bazel-contrib/rules_python.git",
    commit = "9dc505b95063c0774945ecc86c4b8ce51151edfa",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.14",
    # Wires the bundled `coverage` library into py_test runfiles when
    # `bazel coverage` runs, so Python tests emit lcov data alongside Go.
    configure_coverage_tool = True,
)
