# Root manifest for the uv workspace. This is NOT a deployable Python project
# (`tool.uv.package = false` keeps uv from building it). It exists to:
#
#   1. Declare the uv workspace (`[tool.uv.workspace]`) so all Python projects in
#      the repo resolve against a single shared lock graph.
#   2. Hold repo-wide tool config (ruff, ty) as it is added in later PRs — one
#      canonical home, mirrored by per-project overrides only when needed.
#   3. Carry deps that don't belong to a specific workspace member — currently
#      just the temporary smoke target's third-party import, which exercises the
#      pyproject → uv.lock → requirements_lock.txt → pip.parse → @pypi//...
#      chain end-to-end. Removed with the smoke target once the chain is proven.
#
# `members = []` is intentional. The existing `tools/` subdirs are Go modules,
# so a `tools/*` glob would error at lock time; members are added explicitly as
# real Python projects land.

[project]
name = "unnatural-designs-workspace"
version = "0.0.0"
description = "Workspace root for the unnatural_designs monorepo. Not a published package."
requires-python = ">=3.14"
# TRANSIENT: third-party dep for the meta/scripts/smoke_py smoke target. Delete
# along with the smoke target once the pip.parse chain has been verified end-to-end.
dependencies = [
    "requests>=2.32",
]

[tool.uv]
package = false
required-version = ">=0.9"

[tool.uv.workspace]
members = []

# ruff: format + lint. Single repo-wide config. Per-project pyproject.toml
# files inherit unless they redeclare `[tool.ruff]`. CI runs `ruff format
# --check .` and `ruff check .`; pre-commit runs the fixing variants.
[tool.ruff]
line-length = 100
target-version = "py314"
# Where first-party code lives — affects import grouping (`I` rules) so internal
# packages sort together. Extend as new top-level Python roots land.
src = ["meta", "tools"]
extend-exclude = [
    "bazel-*",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Strict-but-reasonable. E/F = pycodestyle + pyflakes baseline; I = import sort;
# B = bugbear (real bugs, not style); UP = pyupgrade (modern syntax); SIM =
# code-simplification; RUF = ruff's own catches; S = bandit security rules.
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "S"]
[tool.ruff.lint.per-file-ignores]
# meta/scripts shell out to first-party tools (`git`, `go`) by name. S607
# (partial executable path) and S603 (untrusted subprocess input) flag those
# calls, but the executables come from a controlled devcontainer/CI PATH and
# the arguments are not externally controlled — false positives in this
# context.
"meta/scripts/**" = ["S603", "S607"]
# Test conveniences that aren't actual problems in test code:
# S101 = `assert` (the whole point of a test); S105/S106/S311 = throwaway
# "secrets" and non-crypto randomness in fixtures; S108 = stable fake paths
# like "/tmp/repo" used as mock arguments (no actual temp file is created).
"**/test_*.py" = ["S101", "S105", "S106", "S108", "S311"]
"**/*_test.py" = ["S101", "S105", "S106", "S108", "S311"]

# ty: static type checker. Single repo-wide config. CI runs `uvx ty check`;
# the editor extension (`astral-sh.ty` in devcontainer.json) reads the same
# section. Strict mode — promote inference warnings to errors so missing
# annotations don't silently pass.
[tool.ty]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
# Mirror ruff's `src` so ty scans the same first-party trees. Excludes cover
# Bazel's symlink farm, virtualenvs, and the host-state directory populated by
# .devcontainer/initialize.sh (none of which are first-party source).
include = ["meta", "tools"]
exclude = ["bazel-*", ".venv", "venv", ".git-plumbing"]

# Rule severities are left at ty's defaults for now. ty ships with a
# strict-leaning default profile and refining the rule map preemptively (before
# real Python code lands) would be speculative; tighten as needed when real
# code surfaces a category of finding we want to escalate.
