load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "check_go_work_lib",
    srcs = ["check_go_work.py"],
)

py_binary(
    name = "check_go_work",
    srcs = ["check_go_work.py"],
    main = "check_go_work.py",
)

py_test(
    name = "test_check_go_work",
    size = "small",
    srcs = ["test_check_go_work.py"],
    main = "test_check_go_work.py",
    deps = [":check_go_work_lib"],
)

py_library(
    name = "check_go_modules_lib",
    srcs = ["check_go_modules.py"],
)

py_binary(
    name = "check_go_modules",
    srcs = ["check_go_modules.py"],
    main = "check_go_modules.py",
)

py_test(
    name = "test_check_go_modules",
    size = "small",
    srcs = ["test_check_go_modules.py"],
    main = "test_check_go_modules.py",
    deps = [":check_go_modules_lib"],
)

py_library(
    name = "check_secrets_dir_lib",
    srcs = ["check_secrets_dir.py"],
)

py_binary(
    name = "check_secrets_dir",
    srcs = ["check_secrets_dir.py"],
    main = "check_secrets_dir.py",
)

py_test(
    name = "test_check_secrets_dir",
    size = "small",
    srcs = ["test_check_secrets_dir.py"],
    main = "test_check_secrets_dir.py",
    deps = [":check_secrets_dir_lib"],
)

py_library(
    name = "check_python_scale_lib",
    srcs = ["check_python_scale.py"],
)

py_binary(
    name = "check_python_scale",
    srcs = ["check_python_scale.py"],
    main = "check_python_scale.py",
)

py_test(
    name = "test_check_python_scale",
    size = "small",
    srcs = ["test_check_python_scale.py"],
    main = "test_check_python_scale.py",
    deps = [":check_python_scale_lib"],
)

py_library(
    name = "check_no_cgo_lib",
    srcs = ["check_no_cgo.py"],
)

py_binary(
    name = "check_no_cgo",
    srcs = ["check_no_cgo.py"],
    main = "check_no_cgo.py",
)

py_test(
    name = "test_check_no_cgo",
    size = "small",
    srcs = ["test_check_no_cgo.py"],
    main = "test_check_no_cgo.py",
    deps = [":check_no_cgo_lib"],
)
