load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "_workspace_lib",
    srcs = ["_workspace.py"],
)

py_test(
    name = "test__workspace",
    size = "small",
    srcs = ["test__workspace.py"],
    main = "test__workspace.py",
    deps = [":_workspace_lib"],
)

py_library(
    name = "check_go_work_lib",
    srcs = ["check_go_work.py"],
    deps = [":_workspace_lib"],
)

py_binary(
    name = "check_go_work",
    srcs = ["check_go_work.py"],
    main = "check_go_work.py",
    deps = [":_workspace_lib"],
)

py_test(
    name = "test_check_go_work",
    size = "small",
    srcs = ["test_check_go_work.py"],
    main = "test_check_go_work.py",
    deps = [
        ":_workspace_lib",
        ":check_go_work_lib",
    ],
)

py_library(
    name = "check_modules_lib",
    srcs = ["check_modules.py"],
    deps = [":_workspace_lib"],
)

py_binary(
    name = "check_modules",
    srcs = ["check_modules.py"],
    main = "check_modules.py",
    deps = [":_workspace_lib"],
)

py_test(
    name = "test_check_modules",
    size = "small",
    srcs = ["test_check_modules.py"],
    main = "test_check_modules.py",
    deps = [
        ":_workspace_lib",
        ":check_modules_lib",
    ],
)

py_library(
    name = "classify_changed_paths_lib",
    srcs = ["classify_changed_paths.py"],
)

py_binary(
    name = "classify_changed_paths",
    srcs = ["classify_changed_paths.py"],
    main = "classify_changed_paths.py",
)

py_test(
    name = "test_classify_changed_paths",
    size = "small",
    srcs = ["test_classify_changed_paths.py"],
    main = "test_classify_changed_paths.py",
    deps = [":classify_changed_paths_lib"],
)

py_library(
    name = "check_secrets_dir_lib",
    srcs = ["check_secrets_dir.py"],
)

py_binary(
    name = "check_secrets_dir",
    srcs = ["check_secrets_dir.py"],
    main = "check_secrets_dir.py",
)

py_test(
    name = "test_check_secrets_dir",
    size = "small",
    srcs = ["test_check_secrets_dir.py"],
    main = "test_check_secrets_dir.py",
    deps = [":check_secrets_dir_lib"],
)

py_library(
    name = "check_no_cgo_lib",
    srcs = ["check_no_cgo.py"],
    deps = [":_workspace_lib"],
)

py_binary(
    name = "check_no_cgo",
    srcs = ["check_no_cgo.py"],
    main = "check_no_cgo.py",
    deps = [":_workspace_lib"],
)

py_test(
    name = "test_check_no_cgo",
    size = "small",
    srcs = ["test_check_no_cgo.py"],
    main = "test_check_no_cgo.py",
    deps = [":check_no_cgo_lib"],
)

py_library(
    name = "ratify_renovate_proposals_lib",
    srcs = ["ratify_renovate_proposals.py"],
    deps = [requirement("packaging")],
)

py_binary(
    name = "ratify_renovate_proposals",
    srcs = ["ratify_renovate_proposals.py"],
    main = "ratify_renovate_proposals.py",
    deps = [requirement("packaging")],
)

py_test(
    name = "test_ratify_renovate_proposals",
    size = "small",
    srcs = ["test_ratify_renovate_proposals.py"],
    main = "test_ratify_renovate_proposals.py",
    deps = [
        ":ratify_renovate_proposals_lib",
        requirement("packaging"),
    ],
)
