load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "netbox",
    srcs = [
        "client.go",
        "models.go",
        "snapshot.go",
    ],
    importpath = "github.com/Syndic/unnatural_designs/tools/network_infrastructure_maintenance/internal/netbox",
    visibility = ["//tools/network_infrastructure_maintenance:__subpackages__"],
)
