load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "netbox",
    srcs = [
        "client.go",
        "models.go",
        "snapshot.go",
    ],
    importpath = "github.com/Syndic/unnatural_designs/tools/network_infrastructure_maintenance/internal/netbox",
    visibility = ["//tools/network_infrastructure_maintenance:__subpackages__"],
)

go_test(
    name = "netbox_test",
    size = "small",
    srcs = [
        "client_test.go",
        "snapshot_test.go",
    ],
    embed = [":netbox"],
)
