load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "shared",
    srcs = [
        "constants.go",
        "terminal.go",
    ],
    importpath = "github.com/Syndic/unnatural_designs/tools/network_infrastructure_maintenance/internal/shared",
    visibility = ["//tools/network_infrastructure_maintenance:__subpackages__"],
)

go_test(
    name = "shared_test",
    srcs = ["terminal_test.go"],
    embed = [":shared"],
)
